test/tests/stages/14_pointers/invalid_types/multiply_pointers_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  (
  const int(0)
  *
  identifier(x)
  )
  ;
  return
  const int(0)
  ;
  }
